--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -151,11 +151,13 @@ ul {
     float: right;
     color: $white;
     opacity: 0.5;
-    margin-top: 1.2rem;
+    margin-top: 1.3rem;
+    font-size: 0.9em;
   }
   ul {
     margin-top: 1rem;
     margin-left: -1.2rem;
+    margin-bottom: 0;
   }
   li {
     margin: 5px 24px;
@@ -167,5 +169,6 @@ ul {
     }
   a {
     color: $white;
+    font-size: 0.9em;
   }
 }
